--- a/src/app/main/product/type/type.component.html
+++ b/src/app/main/product/type/type.component.html
@@ -1,18 +1,105 @@
 <div class="breadcrumbs" id="breadcrumbs">
-    <ul class="breadcrumb">
-      <li>
-        <i class="ace-icon fa fa-home home-icon"></i>
-        <a href="#">Trang chủ</a>
-      </li>
-      <li class="active">Quản lý loại sản phẩm</li>
-    </ul><!-- /.breadcrumb -->
+  <ul class="breadcrumb">
+    <li>
+      <i class="ace-icon fa fa-home home-icon"></i>
+      <a href="#">Trang chủ</a>
+    </li>
+    <li class="active">Quản lý loại sản phẩm</li>
+  </ul><!-- /.breadcrumb -->
+</div>
+<div class="page-content">
+  <div class="row">
+    <div class="col-xs-12">
+      <!-- PAGE CONTENT BEGINS -->
+      <!-- <table class="table">
+          <thead>
+              <tr>
+                  <td>Ma loai</td>
+                  <td>Ten loai</td>
+                  <td>Mo ta</td>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let item of productTypes">
+                  <td>{{item.maLoaiSp}}</td>
+                  <td>{{item.tenLoai}}</td>
+                  <td>{{item.moTa}}</td>
+              </tr>
+          </tbody>
+      </table> -->
+      <div class="table-responsive">
+        <h2 style="margin-top:5px;margin-bottom:15px;font-size:28px;font-weight:600;">Quản lý loại sản phẩm <button
+            class="pull-right js_add_item" data-toggle="modal" data-target="#CreateAndEdit"><i class="fa fa-plus-circle"></i></button></h2>
+        <div id="reder_data">
+          <table class="table table-striped">
+            <colgroup>
+              <col width="1">
+              <col width="1">
+              <col width="1">
+              <col width="1">
+              <col width="1">
+            </colgroup>
+            <thead>
+              <tr>
+                <th style="text-align: left;">#</th>
+                <th style="text-align: left;">Tên loại sản phẩm</th>
+                <th style="text-align: left;">Mô tả</th>
+                <th style="width: 115px;text-align: left;">Thao tác</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of productTypes">
+                <td>{{item.maLoaiSp}}</td>
+                <td>{{item.tenLoai}}</td>
+                <td>{{item.moTa}}</td>
+                <td style="padding-top: 22px;">
+                  <button style="padding: 3px 10px;border:1px solid #999;font-size: 12px" data-toggle="modal" data-target="#CreateAndEdit"  class="styling-edit"><i style="font-size: 12px;" class="fa fa-pencil-square-o text-success text-active">Edit</i></button>
+                  <button style="padding: 3px 10px;border:1px solid #999;font-size: 12px" (click)="Delete(item.maLoaiSp)"  class="styling-delete"><i style="font-size: 12px;" class="fa fa-times text-danger text-active">Delete</i></button>
+                </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- PAGE CONTENT ENDS -->
+    </div><!-- /.col -->
+  </div><!-- /.row -->
+</div><!-- /.page-content -->
+
+<div class="modal fade" id="CreateAndEdit" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title" style="text-align: center;font-size: 22px;color:#428bca;font-weight: 600;">Loai San Pham</h4>
+      </div>
+      <div class="modal-body">
+        <form enctype="multipart/form-data" #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
+          <div class="form-group">
+            <label for="maLoaiSp">Mã loại:</label>
+            <input type="text" class="form-control" id="maLoaiSp" placeholder="Mã loại sản phẩm"
+              name="maLoaiSp" value="" ngModel>
+            <label class="error errorname" for="maLoaiSp" style="display: none;"></label>
+          </div>
+          <div class="form-group">
+            <label for="tenLoai">Tên loại:</label>
+            <input type="text" class="form-control" id="tenLoai" placeholder="Tên loại sản phẩm"
+              name="tenLoai" value="" ngModel>
+            <label class="error errorname" for="tenLoai" style="display: none;"></label>
+          </div>
+          <div class="form-group">
+            <label for="moTa">Mô tả:</label>
+            <textarea name="moTa" id="moTa" class="form-control" rows="3"
+              placeholder="Mô tả ngắn gọn" ngModel></textarea>
+            <label class="error errordesc" for="moTa" style="display: none;"></label>
+          </div>
+          <button type="submit" class="btn btn-primary">Save</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
-  <div class="page-content"> 
-    <div class="row">
-      <div class="col-xs-12">
-        <!-- PAGE CONTENT BEGINS -->
-                   Nội dung trang quản lý loại sản phẩm
-        <!-- PAGE CONTENT ENDS -->
-      </div><!-- /.col -->
-    </div><!-- /.row -->
-  </div><!-- /.page-content -->
+</div>
